# e2e-verification

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  PUBLICATION_ALLOWLIST.txt  PUBLICATION_BLOCKERS.md  PUBLICATION_MANIFEST.md  PUBLICATION_POLICY.md  README.ko.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
agents/: evidence-collector.yaml  evidence-reviewer.yaml  failure-triage.yaml  ux-reviewer.yaml  verification-lead.yaml
docs/: architecture.md  dependency-policy.md  environments.md  migration-0.2.md  model-orchestration.md  open-source-boundary.md  readiness.md  release.md  security-audit.md  ui-audit-v2-integration.md
examples/: README.md  docker.project.json  model-plan.example.json  project.example.json
examples/synthetic-target/: Dockerfile  app.py
schemas/: agent-v1.schema.json  evidence-v1.schema.json  evidence-v2.schema.json  model-plan-v1.schema.json  run-v1.schema.json  run-v2.schema.json  ui-audit-v1.schema.json  workflow-v1.schema.json
skills/closeout-evidence/: SKILL.md
skills/closeout-evidence/agents/: openai.yaml
skills/discover-project/: SKILL.md
skills/discover-project/agents/: openai.yaml
skills/verify-browser-routes/: SKILL.md
skills/verify-browser-routes/agents/: openai.yaml
skills/verify-error-ux/: SKILL.md
skills/verify-error-ux/agents/: openai.yaml
skills/verify-exports/: SKILL.md
skills/verify-rbac-api/: SKILL.md
skills/verify-safe-writes/: SKILL.md
skills/verify-ui-bindings/: SKILL.md
src/e2e_verification/: __init__.py  accessibility.py  adapters.py  agent_task.py  api_harness.py  assets.py  browser_harness.py  cli.py  config.py  environment.py  evidence.py  harnesses.py  http.py  model_plan.py  redaction.py  reporting.py  ui_audit_config.py  ui_audit_harness.py  workflow.py
tests/: test_accessibility.py  test_adapters.py  test_agent_task.py  test_agents_and_skills.py  test_api_integration.py  test_browser_integration.py  test_cli.py  test_config.py  test_environment.py  test_evidence.py  test_harnesses.py  test_install_checkout.py  test_model_plan.py  test_parity.py  test_publication.py  test_reporting.py  test_schemas.py  test_ui_audit_config.py  test_ui_audit_harness.py  test_workflow.py
tools/: check_artifact.py  generate_sbom.py  install_checkout.py  public_repo_gate.py  release_check.py
wiki/: Architecture.md  Evidence-and-Reporting.md  Getting-Started.md  Home.md  Installation-and-Environments.md  Migration-0.2.md  Model-Orchestration.md  Profiles-and-Workflows.md  Safety-Model.md  Troubleshooting.md  _Sidebar.md
workflows/: pilot-visual.json  read-only.json
(+5 files in other folders)
