[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "e2e-verification"
version = "0.1.0"
description = "Agent-guided, evidence-first E2E verification platform"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["playwright>=1.49", "PyYAML>=6.0"]
keywords = ["e2e", "playwright", "testing", "verification", "rbac"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
dev = ["jsonschema>=4.18"]

[project.scripts]
e2e-verify = "e2e_verification.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/e2e-verification/schemas" = ["schemas/*.json"]
"share/e2e-verification/agents" = ["agents/*.yaml"]
"share/e2e-verification/workflows" = ["workflows/*.json"]
"share/e2e-verification/examples" = ["examples/*.json"]
"share/e2e-verification/skills/discover-project" = ["skills/discover-project/SKILL.md"]
"share/e2e-verification/skills/discover-project/agents" = ["skills/discover-project/agents/openai.yaml"]
"share/e2e-verification/skills/verify-rbac-api" = ["skills/verify-rbac-api/SKILL.md"]
"share/e2e-verification/skills/verify-rbac-api/agents" = ["skills/verify-rbac-api/agents/openai.yaml"]
"share/e2e-verification/skills/verify-browser-routes" = ["skills/verify-browser-routes/SKILL.md"]
"share/e2e-verification/skills/verify-browser-routes/agents" = ["skills/verify-browser-routes/agents/openai.yaml"]
"share/e2e-verification/skills/verify-ui-bindings" = ["skills/verify-ui-bindings/SKILL.md"]
"share/e2e-verification/skills/verify-ui-bindings/agents" = ["skills/verify-ui-bindings/agents/openai.yaml"]
"share/e2e-verification/skills/verify-error-ux" = ["skills/verify-error-ux/SKILL.md"]
"share/e2e-verification/skills/verify-error-ux/agents" = ["skills/verify-error-ux/agents/openai.yaml"]
"share/e2e-verification/skills/verify-exports" = ["skills/verify-exports/SKILL.md"]
"share/e2e-verification/skills/verify-exports/agents" = ["skills/verify-exports/agents/openai.yaml"]
"share/e2e-verification/skills/verify-safe-writes" = ["skills/verify-safe-writes/SKILL.md"]
"share/e2e-verification/skills/verify-safe-writes/agents" = ["skills/verify-safe-writes/agents/openai.yaml"]
"share/e2e-verification/skills/closeout-evidence" = ["skills/closeout-evidence/SKILL.md"]
"share/e2e-verification/skills/closeout-evidence/agents" = ["skills/closeout-evidence/agents/openai.yaml"]
